--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -4,3 +4,9 @@
 @import 'main';
 
 /* append your custom style below */
+
+// This sets preview image position to top.
+// By default, content-fit will default to centering the image.
+.preview-img img {
+  object-position: top;
+}
